refactor(styles): move section-title module to global SCSS

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,10 @@
 body {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
+
+.section-title {
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 1.6;
+  letter-spacing: 0.0075em;
+}
