feat(style): add global classes for income and expense text colors

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,3 +14,11 @@ body {
   line-height: 1.6;
   letter-spacing: 0.0075em;
 }
+
+.income-text {
+  color: #009688 !important;
+}
+
+.expenses-text {
+  color: #e91e63 !important;
+}
